--- a/index.html
+++ b/index.html
@@ -1,143 +1,147 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
- <body>
-   
-<h1>
-  Top YouTube Channels
-   </h1
+  <html lang="en-CA">
+  <body>
 
-  <p>Data:
-  <a href="https://en.wikipedia.org/wiki/List_of_most-subscribed_YouTube_channels#50_most-subscribed_channels" target="_blank">Wikipedia </a></p>
- <p>
-   
-  <table>
-  <tr>
-    <th>Rank</th>
-    <th>Name</th>
-    <th>Brand</th>
-    <th>Channel</th>
-    <th>Subscribers (millions)</th>
-    <th>Primary Language</th>
-    <th>Category</th>
-    <th>Country</th>
-  </tr>
+    <h1>
+      Top YouTube Channels
+    </h1> <p>Data:
+    <a href="https://en.wikipedia.org/wiki/List_of_most-subscribed_YouTube_channels#50_most-subscribed_channels" target="_blank">Wikipedia </a></p>
+    <p>
 
-<!--Table Data-->
-  <tr>
-      <td>1</td>
-      <td>T-Series</td>
-      <td>Yes</td>
-      <td>249</td>
-      <td>Hindi</td>
-      <td>Music</td>
-      <td>India</td>
-  </tr>
-    <tr>
-      <td>2</td>
-      <td>MrBeast</td>
-      <td>No</td>
-      <td>184</td>
-      <td>English</td>
-      <td>Entertainmnet</td>
-      <td>United States</td>
-  </tr>
-  <tr>
-      <td>3</td>
-      <td>Cocomelon</td>
-      <td>Yes</td>
-      <td>165</td>
-      <td>English</td>
-      <td>Education</td>
-      <td>United States</td>
-  </tr>
-   <tr>
-      <td>4</td>
-      <td>Sony Entertainment Televison India</td>
-      <td>Yes</td>
-      <td>162</td>
-      <td>Hindi</td>
-      <td>Entertainment</td>
-      <td>India</td>
-  </tr>
-   <tr>
-      <td>5</td>
-      <td>Kids Diana Show</td>
-      <td>Yes</td>
-      <td>113</td>
-      <td>English</td>
-      <td>Entertainment</td>
-      <td>Ukraine-United States</td>
-  </tr>
-  <tr>
-      <td>6</td>
-      <td>PewDiePie</td>
-      <td>No</td>
-      <td>111</td>
-      <td>English</td>
-      <td>Entertainment</td>
-      <td>Sweden</td>
-  </tr>
-  <tr>
-      <td>7</td>
-      <td>Like Nastya</td>
-      <td>No</td>
-      <td>107</td>
-      <td>English</td>
-      <td>Entertainmnet</td>
-      <td>Russia-United States</td>
-  </tr>
-  <tr>
-      <td>8</td>
-      <td>Vlad and Niki</td>
-      <td>No</td>
-      <td>101</td>
-      <td>English</td>
-      <td>Entertainment</td>
-      <td>Russia-United States</td>
-  </tr>
-  <tr>
-      <td>9</td>
-      <td>Zee Music Comapany</td>
-      <td>Yes</td>
-      <td>99.5</td>
-      <td>Hindi</td>
-      <td>Music</td>
-      <td>India</td>
-  </tr>
- <tr>
-      <td>10</td>
-      <td>WWE</td>
-      <td>Yes</td>
-      <td>97.1</td>
-      <td>English</td>
-      <td>Sports</td>
-      <td>United States</td>
-  </tr>
-   </table>
-<!--Table Caption-->
-<p>
-  Which of these YouTube channels have you watched before?
+    <table>
+      <tr>
+        <th>Rank</th>
+        <th>Name</th>
+        <th>Brand</th>
+        <th>Channel</th>
+        <th>Subscribers (millions)</th>
+        <th>Primary Language</th>
+        <th>Category</th>
+        <th>Country</th>
+      </tr>
+
+      <!--Table Data-->
+      <tr>
+        <td>1</td>
+        <td>T-Series</td>
+        <td>Yes</td>
+        <td>249</td>
+        <td>Hindi</td>
+        <td>Music</td>
+        <td>India</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>MrBeast</td>
+        <td>No</td>
+        <td>184</td>
+        <td>English</td>
+        <td>Entertainmnet</td>
+        <td>United States</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Cocomelon</td>
+        <td>Yes</td>
+        <td>165</td>
+        <td>English</td>
+        <td>Education</td>
+        <td>United States</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Sony Entertainment Televison India</td>
+        <td>Yes</td>
+        <td>162</td>
+        <td>Hindi</td>
+        <td>Entertainment</td>
+        <td>India</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>Kids Diana Show</td>
+        <td>Yes</td>
+        <td>113</td>
+        <td>English</td>
+        <td>Entertainment</td>
+        <td>Ukraine-United States</td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td>PewDiePie</td>
+        <td>No</td>
+        <td>111</td>
+        <td>English</td>
+        <td>Entertainment</td>
+        <td>Sweden</td>
+      </tr>
+      <tr>
+        <td>7</td>
+        <td>Like Nastya</td>
+        <td>No</td>
+        <td>107</td>
+        <td>English</td>
+        <td>Entertainmnet</td>
+        <td>Russia-United States</td>
+      </tr>
+      <tr>
+        <td>8</td>
+        <td>Vlad and Niki</td>
+        <td>No</td>
+        <td>101</td>
+        <td>English</td>
+        <td>Entertainment</td>
+        <td>Russia-United States</td>
+      </tr>
+      <tr>
+        <td>9</td>
+        <td>Zee Music Comapany</td>
+        <td>Yes</td>
+        <td>99.5</td>
+        <td>Hindi</td>
+        <td>Music</td>
+        <td>India</td>
+      </tr>
+      <tr>
+        <td>10</td>
+        <td>WWE</td>
+        <td>Yes</td>
+        <td>97.1</td>
+        <td>English</td>
+        <td>Sports</td>
+        <td>United States</td>
+      </tr>
+    </table>
+    <!--Table Caption-->
+    <p>
+      Which of these YouTube channels have you watched before?
     </p>
-<!--Webform Options-->
+    <!--Webform Options-->
     <form action="/action_page.php">
-  <input type="radio" id="T-Series" name="YouTube_channels" value="T-Series">
-  <label for="t-series">T-Series</label><br>
-  <input type="radio" id="MrBeast" name="YouTube_channels" value="MrBeast">
-  <label for="mrbeast">MrBeast</label><br>
-  <input type="radio" id="javascript" name="fav_language" value="JavaScript">
-  <label for="javascript">JavaScript</label><br><br>
-  <input type="submit" value="Submit">
-</form> 
-
-T-Series
-MrBeast
-Cocomelon
-	Sony Entertainment Television India
-	Kids Diana Show
-PewDiePie
-Like Nastya
-Vlad and Niki
-Zee Music Company
-	WWE
-   </body> 
-  </html>
+        <input type="radio" id="T-Series" name="YouTube_channels" value="T-Series">
+        <label for="t-series">T-Series</label><br>
+        <input type="radio" id="MrBeast" name="YouTube_channels" value="MrBeast">
+        <label for="mrbeast">MrBeast</label><br>
+        <input type="radio" id="Cocomelon" name="YouTube_channels" value="Cocomelon">
+        <label for="cocomelon">Cocomelon</label><br>
+      <input type="radio" id="Sony Entertainment Televison India" name="YouTube_channels" value="Sony Entertainmnet Televison India">
+        <label for="sony entertainment televison india">Sony Entertainment Televison India</label><br>
+      <input type="radio" id="Kids Diana Show" name="YouTube_channels" value="Kids Diana Show">
+        <label for="kids diana show">Kids Diana Show</label><br>
+      <input type="radio" id="PewDiePie" name="YouTube_channels" value="PewDiePie">
+        <label for="pewdiepie">PewDiePie</label><br>
+      <input type="radio" id="Like Nastya" name="YouTube_channels" value="Like Nastya">
+        <label for="like nastya">Like Nastya</label><br>
+      <input type="radio" id="Vlad and Niki" name="YouTube_channels" value="Vlad and Niki">
+        <label for="vlad and niki">Vlad and Niki</label><br>
+      <input type="radio" id="Zee Music Comapany" name="YouTube_channels" value="Zee Music Company">
+        <label for="zee music company">Zee Music Company</label><br>
+      <input type="radio" id="WWE" name="YouTube_channels" value="WWE">
+        <label for="wwe">WWE</label><br>
+      <input type="submit" value="Submit">
+    </form>
+    </p>
+  </body>
+</html>
+</html>
